# algorithm_and_datastructure

Clion/Tree/1234/: CMakeLists.txt  main.c
Clion/Tree/BinaryTreeEx1/: CMakeLists.txt  main.c  testlib.c  testlib.h
Clion/Tree/TreeTest/: CMakeLists.txt
HeightOfBinaryTree/: CMakeLists.txt  main.c
InsertBinaryTree/: BinaryTreeNode.h  CMakeLists.txt  dynArrayQueue.c  dynArrayQueue.h  main.c
Queue/: ArrayQueue.c  ArrayQueue.h  DynArrayQueue.c  DynArrayQueue.h  ListQueue.c  ListQueue.h  a.out  test.c
Stack/: ArrayStack.c  ArrayStack.h  ArrayStack.h.gch  DynArrayStack.c  DynArrayStack.h  checkSinbol.c  test.c
Tree/: BinaryTreeNode.h  CMakeLists.txt  DeleteBinaryTree.c  FindInBinaryTree.c  FindInBinaryTreeNonRecrusive.c  FindMax.c  FindMaxNonRecrusive.c  HeightOfBinaryTree.c  InOrder.c  InOrder.h  InOrderNonRecursive.c  InOrderNonRecursive.h  InsertInBinaryTree.c  LevelOrder.c  LevelOrder.h  LevelOrderTraversalInReverse.c  MainLevelOrder.c  MainTreeQueue.c  PostOrder.c  PostOrder.h  PostOrderNonRecursive.c  PostOrderNonRecursive.h  PreOrder.c  PreOrder.h  PreOrderNonRecursive.c  PreOrderNonRecursive.h  SizeOfBinaryTree.c  TreeDynArrayQueue.c  TreeDynArrayQueue.h  TreeStack.c  TreeStack.h  test.c  testStack.c
mylib/: hello.c  hello.h  myBinaryTree.c  myBinaryTree.h  myBinaryTreeNode.c  myBinaryTreeNode.h  myBinaryTreeNodeQueue.c  myBinaryTreeNodeQueue.h  myBinaryTreeNodeStack.c  myBinaryTreeNodeStack.h  myQueue.c  myQueue.h  myStack.c  myStack.h
